2011-08-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.7-9, ready for CRAN; released as 0.7-9-1, 2011-09-23

2011-08-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/special-func.R (log1mexpm): more careful with NAs.

2011-06-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/special-func.R (Bernoulli, Bernoulli.all): first "experiments":
	need accuracy even more than speed.

2011-04-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/special-func.R (polylog): introduce 'is.minus.log' so we can
	get much more accurate Frank density for high correlation.

2010-07-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date): ready for CRAN submission

2010-06-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nacopula.R (onacopula): allow 'family' be a family object as
	well (not only a family *name*)  ===> can use it with opower()-cops!
	(onacopulaL): new function, working recursively with *list*
	argument.

2010-06-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/tauAMH.Rd, NAMESPACE: add help file and export

2010-06-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/aux-acopula.R (tauAMH): nicely working for theta -> 0

2010-06-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/aux-acopula.R (retstableC): maybe use *both* methods, when V0
	is vector; new  printAcopula()
	(printNacopula): as well: now show(<nacopula>) is nice.

2010-06-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/safeUroot.R: add 'check.conv' argument.

2010-05-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/rstable1.R (rstable1C): use rstable1 := rstable1C
	and look at it --> do *NOT* pass gamma to C as it is sometimes a vector.
	* src/retstable.c (rstable_c, ...): corresponding changes

2010-05-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/retstable.c (retstable_c): with 'method', instead of
	retstable_MH_c() etc.